--- a/src/partials/3-numbers.html
+++ b/src/partials/3-numbers.html
@@ -1,8 +1,8 @@
 <section><h2>Введіть 3 числа</h2>
     <div>
-    <input type="number">
-    <input type="number">
-    <input type="number">
+    <input class="input-number-1" type="number">
+    <input class="input-number-2" type="number">
+    <input class="input-number-3" type="number">
   </div>
     <p>Найбільше число, яке ви ввели - (число)</p>
   </section>
