add: css and files

--- a/src/partials/our-team.html
+++ b/src/partials/our-team.html
@@ -1,9 +1,10 @@
-<section><h2>Наша команда</h2>
-    <!-- <img src="" alt=""> -->
-    <p>Ім’я студента</p>
-    <p>Інформація про роботу, яку він/вона виконав/ла</p>
-    <div><button type="button"></button>
-      <button type="button"></button>
-      <button type="button"></button>
+<section><h2 class="our-team-title">Наша команда</h2>
+    
+    <p class="our-team-text">Ім’я студента</p>
+    <p class="our-team-text">Інформація про роботу, яку він/вона виконав/ла</p>
+    <div class="our-team-button-box">
+      <button class="our-team-button"  type="button"></button>
+      <button class="our-team-button" type="button"></button>
+      <button class="our-team-button" type="button"></button>
     </div>
   </section>
