--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -2,3 +2,7 @@
 @import './example';
 @import './layout/header';
 @import './bass/reset';
+@import 'layout/3numbers';
+@import 'layout/body-styles';
+@import 'layout/football.scss';
+@import 'layout/ourteam';
