--- a/src/partials/3-numbers.html
+++ b/src/partials/3-numbers.html
@@ -1,8 +1,9 @@
-<section><h2>Введіть 3 числа</h2>
-    <div>
-    <input class="input-number-1" type="number">
-    <input class="input-number-2" type="number">
-    <input class="input-number-3" type="number">
+<section>
+  <h2 class="three-numbers-title">Введіть 3 числа</h2>
+    <div class="input-container">
+    <input class="input-number-1 three-numbers-input" placeholder="Введіть число" type="number">
+    <input class="input-number-2 three-numbers-input" placeholder="Введіть число" type="number">
+    <input class="input-number-3 three-numbers-input" placeholder="Введіть число" type="number">
   </div>
-    <p>Найбільше число, яке ви ввели - (число)</p>
+    <p class="three-numbers-text">Найбільше число, яке ви ввели - (число)</p>
   </section>
