--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,28 +1,39 @@
 <footer>
-    <div class="footer-wrapper">
-      <div class="footer-logo-wrapper">
-      <a href="" class="footer-logo">
-        <svg class="footer-logo-icon"></svg>
-      </a>
-    </div>
-    <div class="footer-info-wrapper">
-      <ul>
-        <li><p>Тел: <a href="tel:+381234567890">+38 (123) 456 78 90</a></p></li>
-      <li><p>E-Mail: <a href="mailto:codingmagic@gmail.com">codingmagic@gmail.com</a></p></li>
-      <li><p>Facebook: <a href="#">CodingMagic</a></p></li>
-      <li><p>Twitter: <a href="#">CodingMagic</a></p></li>
-      <li><p>Instagram: <a href="#">CodingMagic</a></p></li>
+  <div class="footer-wrapper">
+    <div class="footer-logo-wrapper">
+    <a href="" class="footer-logo">
+      <svg class="footer-logo-icon"></svg>
+    </a>
+  </div>
+  <div class="footer-info-wrapper">
+    <ul>
+      <li><p>Тел: <a href="tel:+381234567890">+38 (123) 456 78 90</a></p></li>
+    <li><p>E-Mail: <a href="mailto:codingmagic@gmail.com">codingmagic@gmail.com</a></p></li>
+    <li><p>Facebook: <a href="#">CodingMagic</a></p></li>
+    <li><p>Twitter: <a href="#">CodingMagic</a></p></li>
+    <li><p>Instagram: <a href="#">CodingMagic</a></p></li>
 </ul>
+  </div>
+  <div class="footer-subscribe-wrapper">
+    <form >
+      <input type="email" placeholder="Ваше ім’я..." class="input-email">
+      <button class="primary-button" data-action="open-modal" type="button">Підписатись</button>
+      <br><p>*Підписавшись, Ви зможете ортимувати інформаццію про новинки на сайті</p>
+    </form>
+  </div>
+  </div>
+  <div class="footer-subscribtion-greating">
+    <div class="backdrop js-backdrop">
+      <div class="modal">
+        <h2 class="thanks-for-subscribe">Дякую за підписку!</h2>
+        <button type="button" class="button-close-footer" data-action="close-modal"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17" fill="none">
+          <path d="M1 1L8.5 8.5M16 16L8.5 8.5M8.5 8.5L16 1L1 16" stroke="black"/>
+        </svg></button>
+        <img src="/src/images/game-development 1.png" alt="" class="modaal-image-background modaal-image-background1">
+        <img src="/src/images/puzzle 1.png" alt="" class="modaal-image-background modaal-image-background2">
+        <img src="/src/images/sword 1.png" alt="" class="modaal-image-background modaal-image-background3">
+        <img src="/src/images/tic-tac-toe 1.png" alt="" class="modaal-image-background modaal-image-background4">
+      </div>
     </div>
-    <div class="footer-subscribe-wrapper">
-      <form >
-        <input type="email">
-        <button class="primary-button">Підписатись</button>
-        <p>*Підписавшись, Ви зможете ортимувати інформаццію про новинки на сайті</p>
-      </form>
-    </div>
-    </div>
-    <div class="footer-subscribtion-greating">
-      <!-- до цього діва буде кріпитися модальне вікно з повідомленням про підписку -->
-    </div>
-  </footer>
+  </div>
+</footer>
