--- a/src/sass/layout/_body-styles.scss
+++ b/src/sass/layout/_body-styles.scss
@@ -1,4 +1,13 @@
 body {
     padding-right: 175px;
     padding-left: 175px;
+   position: relative;
 }
+
+// body {
+//     position: absolute;
+//     background-image: url('/src/images/Group\ 141.png'); /* Replace 'your-image-url.jpg' with the actual path to your image */
+//     // background-size: cover; /* Adjust the background size as needed */
+//     background-position:   right; /* Adjust the background position as needed */
+//     background-repeat: no-repeat; 
+// }
