--- a/src/sass/layout/_football.scss
+++ b/src/sass/layout/_football.scss
@@ -9,3 +9,20 @@
     text-align: center;
     margin-bottom: 36px;
 }
+
+#ball {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    pointer-events: none;
+    background-image: url("/src/images/football\ \(1\)\ 1.png");
+}
+
+.football-field {
+    width: 720px;
+    height: 220px;
+    border-radius: 37px;
+    border: 2px solid #000;
+    background: #5ABB58;
+}
