--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -66,6 +66,7 @@ img {
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
+    z-index: 100;
 }
 .modal-link {
     border: #fff;
