--- a/src/partials/time-calculator.html
+++ b/src/partials/time-calculator.html
@@ -1,6 +1,9 @@
-<section>
-    <h2>Калькулятор часу</h2>
-  <input type="number"><svg class="search-icon"></svg></input>
-  <svg class="dots-row-icon"></svg>
-  <p class="time-result"></p>
-</section>
+<h2 class="title">Калькулятор часу</h2>
+<div class="time-calculator">
+  <div class="input-button">
+    <input type="number" placeholder="Введіть число" class="enter-number">
+    <button class="search-time"><img src="./images/search.png" alt="" class="img-search"></button>
+  </div>
+  <img src="./images/vector-calculator.png" alt="" class="vector">
+  <p class="day-hour-min-sec">Введіть число</p>
+</div>
