--- a/src/partials/birthday.html
+++ b/src/partials/birthday.html
@@ -1,12 +1,10 @@
-
 <section>
-  <div class="birthday-wrapper">
-  <h2 class="heroh2-title">Перевір в який рік ти народився</h2>
-  <input type="text" name="text" class="search" placeholder="Введіть рік народження"><svg
-    class="search-icon"></svg></input>
-    <p>Ви народилися у високосний рік!</p>
-  </div>
-<p>Ви народилися у високосний рік!</p>
+  <h2 class="title">Калькулятор часу</h2>
+  <div class="birthday">
+    <div class="input-button">
+      <input type="number" placeholder="Введіть число" class="input">
+      <button class="search"><img src="./images/search.png" alt="" class="img-search"></button>
     </div>
-    </section>
-
+    <p class="year-you-born">Введіть число</p>
+  </div>
+</section>
