rock-scissor-paper

--- a/src/partials/birthday.html
+++ b/src/partials/birthday.html
@@ -1,10 +1,10 @@
 <section>
-  <h2 class="title">Калькулятор часу</h2>
+  <h2 class="title">Перевір в який рік ти народився</h2>
   <div class="birthday">
     <div class="input-button">
       <input type="number" placeholder="Введіть число" class="input">
       <button class="search"><img src="./images/search.png" alt="" class="img-search"></button>
     </div>
-    <p class="year-you-born">Введіть число</p>
+    <p class="year-you-born">Введіть рік народження</p>
   </div>
 </section>
