--- a/src/partials/rock-scissor-paper.html
+++ b/src/partials/rock-scissor-paper.html
@@ -1,27 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <section class="rock-scissor-paper">
-        <div class="container">
-          <h2 class="rock-scissor-paper-title">Камінь - ножиці - папір</h2>
-          <div class="button-box">
-            <button class="rock"></button>
-            <button class="scissor"></button>
-            <button class="paper"></button>
-          </div>
-          <div class="text-box">
-            <p class="rock-scissor-paper-text">Рахунок:</p>
-            <p class="rock-scissor-paper-text">Комп'ютер - <span class="count-1">0</span></p>
-            <p class="rock-scissor-paper-text">ви - <span class="count-2">0</span></p>
-          </div>
-          <p>Ви виграли раунд!</p>
-          <button class="primary-button"></button>
-        </div>
-      </section>
-</body>
-</html>
+<section class="rock-scissor-paper">
+  <h2 class="rock-scissor-paper-title">Камінь - ножиці - папір</h2>
+  <div class="all-box">
+    <div class="game-box">
+      <div class="button-box">
+        <button class="rock"><img src="./images/stone.png" alt="" class="rock-img"></button>
+        <button class="scissor"><img src="./images/scissors.png" alt="" class="scissor-img"></button>
+        <button class="paper"><img src="./images/paper.png" alt="" class="paper-img"></button>
+      </div>
+      <p class="you-win">Ви виграли раунд!</p>
+      <button class="computer-var">Варіант комп’ютера</button>
+    </div>
+    <div class="text-box">
+      <p class="rock-scissor-paper-text">Рахунок:</p>
+      <p class="rock-scissor-paper-text">Комп'ютер - <span class="count-1">0</span></p>
+      <p class="rock-scissor-paper-text">Ви - <span class="count-2">0</span></p>
+    </div>
+  </div>
+</section>
