create new section  sienlist

--- a/src/partials/sientiest.html
+++ b/src/partials/sientiest.html
@@ -1,15 +1,31 @@
-<section>
+<!-- <section>
     <h2>Обери вченого/их</h2>
-    <div class="sientist-images-box">
+    <div class="sientist-images-box"> -->
      <!-- тут мають рендеритися картинки -->
        <!-- створити масив з картинками, потім створити потрібну 
      кількість img прикріпити до діва sientist-images-box -->
-    </div>
-    <div class="buttons-filter-box">
+    <!-- </div>
+    <div class="buttons-filter-box"> -->
      <!-- тут рендеряться кнопки -->
      <!-- створити масив з текстом, потім стовири потрібну 
      кількість кнопок дістаючи текст з масиву, 
      прикріпити до діва з класом buttons-filter-box -->
+    <!-- </div>
+
+  </section> -->
+  <section>
+    <div id="scientistCardsContainer">
+         
     </div>
 
+    <button class="button-scien1">Які вчені народилися в 19 ст.</button>
+    <button class="button-scien2">Відсортувати вчених за алфавітом</button>
+    <button class="button-scien3">Відсортувати вчених за кількістю прожитих років</button>
+    <button class="button-scien4">Знайти вченого, який народився найпізніше</button>
+    <button class="button-scien5">Знайти рік народження Albert Einshtein</button>
+    <button class="button-scien6">Знайти вчених, прізвища яких починаються на літеру “С” </button>
+    <button class="button-scien7">Видалити всіх вчених, ім’я яких починається на “А”</button>
+    <button class="button-scien8">Знайти вченого, який прожив найдовше і вченого, 
+       який прожив найменше</button>
+       <button class="button-scien9">Знайти вчених, в яких співпадають перші літери імені і прізвища</button>
   </section>
