--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -13,3 +13,4 @@
 @import 'layout/time-calculator';
 @import 'layout/computerGuessed';
 @import 'layout/rock-scissor-paper';
+@import 'layout/sienlist';
