--- a/src/partials/computerGuessed.html
+++ b/src/partials/computerGuessed.html
@@ -1,11 +1,16 @@
 <section class="computerGuessed">
     <h2 class="feature-title">Вгадай число, яке загадав комп'ютер</h2>
     <div class="computerGuessed-div">
+      <!-- <div></div>
     <input type="text" class="input-guese-number-computer-guesed" placeholder="Введіть число">
     <button class="check-number-guese-number-computer-guesed"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
       <circle cx="6.52174" cy="6.52174" r="5.52174" stroke="white" stroke-width="2"/>
       <path d="M14.2929 15.7071C14.6834 16.0976 15.3166 16.0976 15.7071 15.7071C16.0976 15.3166 16.0976 14.6834 15.7071 14.2929L14.2929 15.7071ZM11.468 10.0538L10.7609 9.34665L9.34666 10.7609L10.0538 11.468L11.468 10.0538ZM15.7071 14.2929L11.468 10.0538L10.0538 11.468L14.2929 15.7071L15.7071 14.2929Z" fill="white"/>
-    </svg></button>
+    </svg></button> -->
+    <div class="input-button input-button-guese-number">
+      <input type="number" placeholder="Введіть число" class="input input-guese-number-computer-guesed">
+      <button class="search check-number-guese-number-computer-guesed"><img src="./images/search.png" alt="" class="img-search"></button>
+    </div>
     <p class="text-win-or-lose-guese-number-computer-guesed"></p>
   </div>
 </section>
