--- a/src/partials/sientiest.html
+++ b/src/partials/sientiest.html
@@ -18,14 +18,14 @@
          
     </div>
 
-    <button class="button-scien1">Які вчені народилися в 19 ст.</button>
-    <button class="button-scien2">Відсортувати вчених за алфавітом</button>
-    <button class="button-scien3">Відсортувати вчених за кількістю прожитих років</button>
-    <button class="button-scien4">Знайти вченого, який народився найпізніше</button>
-    <button class="button-scien5">Знайти рік народження Albert Einshtein</button>
-    <button class="button-scien6">Знайти вчених, прізвища яких починаються на літеру “С” </button>
-    <button class="button-scien7">Видалити всіх вчених, ім’я яких починається на “А”</button>
-    <button class="button-scien8">Знайти вченого, який прожив найдовше і вченого, 
+    <button class="button-scien1 button-scienlist">Які вчені народилися в 19 ст.</button>
+    <button class="button-scien2 button-scienlist">Відсортувати вчених за алфавітом</button>
+    <button class="button-scien3 button-scienlist">Відсортувати вчених за кількістю прожитих років</button>
+    <button class="button-scien4 button-scienlist">Знайти вченого, який народився найпізніше</button>
+    <button class="button-scien5 button-scienlist">Знайти рік народження Albert Einshtein</button>
+    <button class="button-scien6 button-scienlist">Знайти вчених, прізвища яких починаються на літеру “С” </button>
+    <button class="button-scien7 button-scienlist">Видалити всіх вчених, ім’я яких починається на “А”</button>
+    <button class="button-scien8 button-scienlist">Знайти вченого, який прожив найдовше і вченого, 
        який прожив найменше</button>
-       <button class="button-scien9">Знайти вчених, в яких співпадають перші літери імені і прізвища</button>
+       <button class="button-scien9 button-scienlist">Знайти вчених, в яких співпадають перші літери імені і прізвища</button>
   </section>
