--- a/src/sass/layout/_sienlist.scss
+++ b/src/sass/layout/_sienlist.scss
@@ -8,3 +8,18 @@
     flex-shrink: 0;
     border-radius: 20px;
 }
+.scientist-card>p {
+    display: flex;
+    justify-content: center;
+    padding-top: 20px;
+ }
+ .button-scienlist {
+    display: inline-flex;
+    padding: 10px 20px;
+    align-items: flex-start;
+    gap: 10px;
+    border-radius: 20px;
+    background: #000;
+    box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 0.25);
+    color: white;
+ }
