fixing toggle and bg

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer>
+<footer id="footer">
   <div class="footer-wrapper">
     <div class="footer-logo-wrapper">
     <a href="" class="footer-logo">
@@ -16,7 +16,7 @@
   </div>
   <div class="footer-subscribe-wrapper">
     <form >
-      <input type="email" placeholder="Ваше ім’я..." class="input-email">
+      <input type="email" placeholder="Ваша ел. адреса..." class="input-email">
       <button class="primary-button" data-action="open-modal" type="button">Підписатись</button>
       <br><p>*Підписавшись, Ви зможете ортимувати інформаццію про новинки на сайті</p>
     </form>
