--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -12,7 +12,7 @@
                   </div>
               </li>
               <li class="header-list-item"><a href="#">Наша команда</a></li>
-              <li class="header-list-item"><a href="#">Контакти</a></li>
+              <li class="header-list-item"><a href="#footer">Контакти</a></li>
           </ul>
           <ul class="header-list list2">
               <li class="header-list-item"><div>
