--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -191,3 +191,24 @@ img {
 .list1 {
     padding-right: 50px;
 }
+body {
+    background: #fff;
+  }
+  a {
+    color: #0033cc;
+  }
+  header.dark-theme {
+    color: #eee;
+    background: #121212;
+  }
+  footer.dark-theme {
+    color: #eee;
+    background: #121212;
+  }
+  main.dark-theme {
+    color: #eee;
+    background: #121212;
+  }
+  .modal-content-header.dark-theme {
+    background-color: #121212;
+  }
