--- a/src/sass/layout/_body-styles.scss
+++ b/src/sass/layout/_body-styles.scss
@@ -1,15 +1,23 @@
 body {
-    padding-right: 175px;
-    padding-left: 175px;
    position: relative;
    background-image: url('../images/back-ground.png');
    background-repeat: no-repeat;
    background-size: cover;
+   background-color: #EEEEEE;
 }
-main, footer{
+main, footer, header{
     background-color: #fff;
     z-index: 1;
     background-size: 100%;
+}
+main {
+    margin-right: 175px;
+    margin-left: 175px;
+}
+section {
+    padding-bottom: 40px;
+    padding-right: 40px;
+    padding-left: 40px;
 }
 // body {
 //     position: absolute;
