--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -29,10 +29,10 @@
         <button type="button" class="button-close-footer" data-action="close-modal"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17" fill="none">
           <path d="M1 1L8.5 8.5M16 16L8.5 8.5M8.5 8.5L16 1L1 16" stroke="black"/>
         </svg></button>
-        <img src="/src/images/game-development 1.png" alt="" class="modaal-image-background modaal-image-background1">
-        <img src="/src/images/puzzle 1.png" alt="" class="modaal-image-background modaal-image-background2">
-        <img src="/src/images/sword 1.png" alt="" class="modaal-image-background modaal-image-background3">
-        <img src="/src/images/tic-tac-toe 1.png" alt="" class="modaal-image-background modaal-image-background4">
+        <img src="/src/images/game-development1.png" alt="l" class="modaal-image-background modaal-image-background1">
+        <img src="/src/images/puzzle1.png" alt="l" class="modaal-image-background modaal-image-background2">
+        <img src="/src/images/sword1.png" alt="o" class="modaal-image-background modaal-image-background3">
+        <img src="/src/images/tic-tac-toe1.png" alt="l" class="modaal-image-background modaal-image-background4">
       </div>
     </div>
   </div>
