--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,15 +4,15 @@
 
         <ul class="header-list list1">
               <li class="header-list-item dropdown">
-                  <a href="#" class="dropdown-btn">Інтерактив</a>
+                  <a href="#" class="dropdown-btn header-link">Інтерактив</a>
                   <div class="dropdown-content">
                       <a class="dropdown-content-items" href="#">Числовий</a>
                       <a class="dropdown-content-items" href="#">Ігровий</a>
                       <a class="dropdown-content-items last-dropdown-child" href="#">Ознайомчий</a>
                   </div>
               </li>
-              <li class="header-list-item"><a href="#">Наша команда</a></li>
-              <li class="header-list-item"><a href="#footer">Контакти</a></li>
+              <li class="header-list-item"><a href="#our-team" class="header-link">Наша команда</a></li>
+              <li class="header-list-item"><a href="#footer" class="header-link">Контакти</a></li>
           </ul>
           <ul class="header-list list2">
               <li class="header-list-item"><div>
@@ -42,7 +42,7 @@
                   <div class="modal-header" id="modal-header">
                       <div class="modal-body-header">
                           <div class="modal-content-header">
-                              <button class="modal-close-header close-modal-header"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17" fill="none">
+                              <button class="modal-close-header close-modal-header"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17" fill="none" class="close-modal-svg">
                                   <path d="M1 1L8.5 8.5M16 16L8.5 8.5M8.5 8.5L16 1L1 16" stroke="black"/>
                                 </svg></button>
                               <p class="modal-text">Привіт! <br>Ви потрапили на сайт інтерактивних ігор та завдань <br>Надіємось, що вам сподобається і ви отримаєте позитивні емоції! <br>Бажаємо Вам гарно провести час!</p>
