--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -76,7 +76,7 @@
     align-items: center;
   }
   .modaal-image-background {
-    position: absolute;
+    position: fixed;
     width: 30px;
     height: 30px;
   }
@@ -100,3 +100,4 @@
     background-color: #fff;
     border: 0;
   }
+  
