fixes+ourteam+underline

--- a/src/partials/Calculator.html
+++ b/src/partials/Calculator.html
@@ -1,5 +1,5 @@
 <section class="calculator-box">
- 
+  <hr class="line" style="background-color: black; height: 1px;  width: 536px">
   <h2 class="calc-title">Калькулятор</h2>
   <div class="calculator-wrapper ">
   <input class="calculator-input" id="operand1" type="number">
