--- a/src/partials/computerGuessed.html
+++ b/src/partials/computerGuessed.html
@@ -1,4 +1,6 @@
 <section class="computerGuessed">
+  <hr class="line" style="background-color: black; height: 1px;  width: 536px">
+
     <h2 class="feature-title">Вгадай число, яке загадав комп'ютер</h2>
     <div class="computerGuessed-div">
       <!-- <div></div>
