--- a/src/partials/our-team.html
+++ b/src/partials/our-team.html
@@ -1,10 +1,27 @@
-<section><h2 class="our-team-title">Наша команда</h2>
-    
-    <p class="our-team-text">Ім’я студента</p>
-    <p class="our-team-text">Інформація про роботу, яку він/вона виконав/ла</p>
-    <div class="our-team-button-box">
-      <button class="our-team-button"  type="button"></button>
-      <button class="our-team-button" type="button"></button>
-      <button class="our-team-button" type="button"></button>
+<div id="team" class="wrap-team">
+    <hr class="line" style="background-color: black; height: 1px;  width: 536px">
+
+    <h1 class="title-team">Наша команда</h1>
+
+    <div class="list-team">
+        <div class="wrap-item">
+            <img class="img-person" src="/src/images/Максим.jpg" alt="" class="img-person">
+            <p class="name-student">Маким</p>
+            <p class="information-student">Team lead</p>
+        </div>
+        <div class="wrap-item">
+            <img class="img-person" src="/src/images/Олег.jpg" alt="" class="img-person">
+            <p class="name-student">Олег</p>
+            <p class="information-student">Scrum master</p>
+        </div>
+        <div class="wrap-item">
+            <img class="img-person" src="/src/images/Кирил.jpg" alt="" class="img-person">
+            <p class="name-student">Кирил</p>
+            <p class="information-student">Developer</p>
+        </div>
     </div>
-  </section>
+
+</div>
+
+<script src="/src/js/our-team.js"></script>
+
