--- a/src/partials/3-numbers.html
+++ b/src/partials/3-numbers.html
@@ -1,4 +1,5 @@
 <section>
+  <hr class="line" style="background-color: black; height: 1px;  width: 536px">
   <h2 class="three-numbers-title">Введіть 3 числа</h2>
   <div class="input-container">
       <input class="input-number-1 three-numbers-input" placeholder="Введіть число" type="number">
