--- a/src/partials/birthday.html
+++ b/src/partials/birthday.html
@@ -1,4 +1,5 @@
 <section>
+  <hr class="line" style="background-color: black; height: 1px;  width: 536px">
   <h2 class="title">Перевір в який рік ти народився</h2>
   <div class="birthday">
     <div class="input-button">
