--- a/src/partials/dino-game.html
+++ b/src/partials/dino-game.html
@@ -1,5 +1,9 @@
+<hr class="line" style="background-color: black; height: 1px;  width: 536px">
+<div class="dino-wrap">
 <h2 class="dino-title">Google динозавр</h2>
+
 <div class="dino-game">
     <div class="dino"></div>
     <div class="cactus"></div>
+</div>
 </div>
