--- a/src/partials/rock-scissor-paper.html
+++ b/src/partials/rock-scissor-paper.html
@@ -1,4 +1,5 @@
 <section class="rock-scissor-paper">
+  <hr class="line" style="background-color: black; height: 1px;  width: 536px">
   <h2 class="rock-scissor-paper-title">Камінь - ножиці - папір</h2>
   <div class="all-box">
     <div class="game-box">
