--- a/src/partials/time-calculator.html
+++ b/src/partials/time-calculator.html
@@ -1,3 +1,5 @@
+<hr class="line" style="background-color: black; height: 1px;  width: 536px">
+
 <h2 class="title">Калькулятор часу</h2>
 <div class="time-calculator">
   <div class="input-button">
