--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -5,7 +5,6 @@
 @import 'layout/3numbers';
 @import 'layout/body-styles';
 @import 'layout/football.scss';
-@import 'layout/ourteam';
 @import 'layout/footer';
 @import 'layout/dino-game';
 @import 'layout/birthday';
@@ -14,3 +13,4 @@
 @import 'layout/computerGuessed';
 @import 'layout/rock-scissor-paper';
 @import 'layout/sienlist';
+@import 'layout/our-team';
