--- a/src/sass/layout/_calculator.scss
+++ b/src/sass/layout/_calculator.scss
@@ -1,8 +1,8 @@
 
 .calculator-box {
-margin: 36px;
 width: 60%;
 margin:  auto;
+margin-bottom: 36px;
 
 }
 .calculator-wrapper {
@@ -15,6 +15,7 @@ margin:  auto;
 .calc-title {
     margin-bottom: 36px;
     text-align: center;
+    margin-top: 36px;
 }
 .calculator-input {
     margin-right: 38px;
