centring sections and really small fixing scienlist

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,5 @@
 <footer id="footer">
+  <div class="container">
   <div class="footer-wrapper">
     <div class="footer-logo-wrapper">
     <a href="" class="footer-logo">
@@ -35,5 +36,6 @@
         <img src="/src/images/tic-tac-toe1.png" alt="l" class="modaal-image-background modaal-image-background4">
       </div>
     </div>
+  </div>
   </div>
 </footer>
