--- a/src/partials/computerGuessed.html
+++ b/src/partials/computerGuessed.html
@@ -1,4 +1,5 @@
 <section class="computerGuessed">
+  <div class="container">
   <hr class="line" style="background-color: black; height: 1px;  width: 536px">
 
     <h2 class="feature-title">Вгадай число, яке загадав комп'ютер</h2>
@@ -14,5 +15,6 @@
       <button class="search check-number-guese-number-computer-guesed"><img src="./images/search.png" alt="" class="img-search"></button>
     </div>
     <p class="text-win-or-lose-guese-number-computer-guesed"></p>
+  </div>
   </div>
 </section>
