--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -8,8 +8,7 @@ header {
     display: flex;
     align-items: center; 
 }
-img {
-    padding-right: 81px;
+.img {
     width: 93px;
     height: 38px;
 }
