--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,27 +1,38 @@
 <header>
-  <div class="container">
-      <nav class="header-nav">
+    <div class="container">
+        <nav class="header-nav">
 
-        <ul class="header-list list1">
-              <li class="header-list-item dropdown">
-                  <a href="#" class="dropdown-btn header-link">Інтерактив</a>
-                  <div class="dropdown-content">
-                      <a class="dropdown-content-items" href="#">Числовий</a>
-                      <a class="dropdown-content-items" href="#">Ігровий</a>
-                      <a class="dropdown-content-items last-dropdown-child" href="#">Ознайомчий</a>
-                  </div>
-              </li>
-              <li class="header-list-item"><a href="#our-team" class="header-link">Наша команда</a></li>
-              <li class="header-list-item"><a href="#footer" class="header-link">Контакти</a></li>
-          </ul>
-          <ul class="header-list list2">
-              <li class="header-list-item"><div>
-                  <input type="checkbox" id="darkmode-toggle" class="input-darkmode-toggle">
-                  <label for="darkmode-toggle" class="label-header">    
-                      <svg display="none" class="icon-theme"><symbol class="icon-theme" viewBox="-1 0 19 19" id="sun"><path d="M16.417 9.579A7.917 7.917 0 1 1 8.5 1.662a7.917 7.917 0 0 1 7.917 7.917zm-12.94.396H4.58a.396.396 0 0 0 0-.792H3.477a.396.396 0 0 0 0 .792zm1.19-3.667.781.781a.396.396 0 0 0 .56-.56l-.78-.78a.396.396 0 0 0-.56.56zm1.341 5.76a.396.396 0 0 0-.56 0l-.78.781a.396.396 0 1 0 .56.56l.78-.78a.396.396 0 0 0 0-.56zm5.59-2.489a3.096 3.096 0 1 0-3.095 3.096 3.096 3.096 0 0 0 3.096-3.096zM8.103 5.662a.396.396 0 0 0 .792 0V4.558a.396.396 0 0 0-.792 0zm.792 7.834a.396.396 0 0 0-.792 0V14.6a.396.396 0 1 0 .792 0zm2.094-6.407a.396.396 0 0 0 .56 0l.78-.78a.396.396 0 0 0-.56-.56l-.78.78a.395.395 0 0 0 0 .56zm1.34 5.76-.78-.78a.396.396 0 0 0-.56.56l.78.78a.396.396 0 0 0 .56-.56zm1.587-3.27a.396.396 0 0 0-.396-.396h-1.104a.396.396 0 1 0 0 .792h1.104a.396.396 0 0 0 .396-.396z"/></symbol></svg>
-                      <svg width="20px" height="20px" class="icon-theme"><use xlink:href="#sun"></use></svg>
-                      <svg display="none"><symbol viewBox="0 0 679.189 679.189" id="moon" class="icon-theme"><g>
-                          <path d="M634.419,249.837c-11.261-41.715-30.148-80.709-57.585-117.478c-27.437-36.686-60.594-66.942-100.471-89.613
+            <ul class="header-list list1">
+                <li class="header-list-item dropdown">
+                    <a href="#" class="dropdown-btn header-link">Інтерактив</a>
+                    <div class="dropdown-content">
+                        <a class="dropdown-content-items" href="#">Числовий</a>
+                        <a class="dropdown-content-items" href="#">Ігровий</a>
+                        <a class="dropdown-content-items last-dropdown-child" href="#">Ознайомчий</a>
+                    </div>
+                </li>
+                <li class="header-list-item"><a href="#our-team" class="header-link">Наша команда</a></li>
+                <li class="header-list-item"><a href="#footer" class="header-link">Контакти</a></li>
+            </ul>
+            <ul class="header-list list2">
+                <li class="header-list-item">
+                    <div>
+                        <input type="checkbox" id="darkmode-toggle" class="input-darkmode-toggle">
+                        <label for="darkmode-toggle" class="label-header">
+                            <svg display="none" class="icon-theme">
+                                <symbol class="icon-theme" viewBox="-1 0 19 19" id="sun">
+                                    <path
+                                        d="M16.417 9.579A7.917 7.917 0 1 1 8.5 1.662a7.917 7.917 0 0 1 7.917 7.917zm-12.94.396H4.58a.396.396 0 0 0 0-.792H3.477a.396.396 0 0 0 0 .792zm1.19-3.667.781.781a.396.396 0 0 0 .56-.56l-.78-.78a.396.396 0 0 0-.56.56zm1.341 5.76a.396.396 0 0 0-.56 0l-.78.781a.396.396 0 1 0 .56.56l.78-.78a.396.396 0 0 0 0-.56zm5.59-2.489a3.096 3.096 0 1 0-3.095 3.096 3.096 3.096 0 0 0 3.096-3.096zM8.103 5.662a.396.396 0 0 0 .792 0V4.558a.396.396 0 0 0-.792 0zm.792 7.834a.396.396 0 0 0-.792 0V14.6a.396.396 0 1 0 .792 0zm2.094-6.407a.396.396 0 0 0 .56 0l.78-.78a.396.396 0 0 0-.56-.56l-.78.78a.395.395 0 0 0 0 .56zm1.34 5.76-.78-.78a.396.396 0 0 0-.56.56l.78.78a.396.396 0 0 0 .56-.56zm1.587-3.27a.396.396 0 0 0-.396-.396h-1.104a.396.396 0 1 0 0 .792h1.104a.396.396 0 0 0 .396-.396z" />
+                                </symbol>
+                            </svg>
+                            <svg width="20px" height="20px" class="icon-theme">
+                                <use xlink:href="#sun"></use>
+                            </svg>
+                            <svg display="none">
+                                <symbol viewBox="0 0 679.189 679.189" id="moon" class="icon-theme">
+                                    <g>
+                                        <path
+                                            d="M634.419,249.837c-11.261-41.715-30.148-80.709-57.585-117.478c-27.437-36.686-60.594-66.942-100.471-89.613
                               C437.41,20.569,395.653,5.977,351.16,0.206c-9.233-1.154-16.455,2.556-21.253,10.8c-4.873,8.409-4.188,16.571,1.542,23.99
                               c36.786,47.486,56.793,100.825,60.668,160.76c3.858,59.522-9.621,114.923-39.415,166.943
                               c-26.241,45.754-61.749,82.028-107.816,108.574c-45.903,26.464-95.45,39.406-148.394,39.406c-17,0-29.753-0.741-38.252-2.308
@@ -32,28 +43,37 @@
                               c-52.556,0-102.029-13.521-148.006-40.231c-21.262-12.283-38.64-25.474-52.944-38.994c58.739-1.566,113.233-17.396,163.852-47.568
                               c50.627-30.091,90.668-70.734,120.183-121.683c29.612-51.114,45.021-106.267,45.598-165.376
                               c0.585-59.193-12.754-114.428-40.569-165.459c22.021,7.337,42.004,16.818,59.894,27.041
-                              c84.131,48.146,135.723,134.956,146.077,223.745C607.823,364.348,595.449,428.074,563.313,483.64z"/>
-                      </g></symbol></svg>
-                      <svg width="18px" height="18px" class="icon-theme moon"><use xlink:href="#moon"></use></svg></label>
-                  <div class="background"></div>
-              </div></li>
-              <li class="header-list-item">
-                  <button class="modal-link">Вітаємо User</button>
-                  <div class="modal-header" id="modal-header">
-                      <div class="modal-body-header">
-                          <div class="modal-content-header">
-                              <button class="modal-close-header close-modal-header"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17" fill="none" class="close-modal-svg">
-                                  <path d="M1 1L8.5 8.5M16 16L8.5 8.5M8.5 8.5L16 1L1 16" stroke="black"/>
-                                </svg></button>
-                              <p class="modal-text">Привіт! <br>Ви потрапили на сайт інтерактивних ігор та завдань <br>Надіємось, що вам сподобається і ви отримаєте позитивні емоції! <br>Бажаємо Вам гарно провести час!</p>
-                              <p class="modal-text">Введіть своє ім’я:</p>
-                              <input type="text" placeholder="Ваше ім’я..." class="input-modal-header">
-                              <button class="button-modal-header">Зберегти</button>
-                          </div>
-                      </div>
-                  </div>
-              </li>
-          </ul>
-      </nav>
-  </div>
+                              c84.131,48.146,135.723,134.956,146.077,223.745C607.823,364.348,595.449,428.074,563.313,483.64z" />
+                                    </g>
+                                </symbol>
+                            </svg>
+                            <svg width="18px" height="18px" class="icon-theme moon">
+                                <use xlink:href="#moon"></use>
+                            </svg></label>
+                        <div class="background"></div>
+                    </div>
+                </li>
+                <li class="header-list-item">
+                    <button class="modal-link">Вітаємо User</button>
+                    <div class="modal-header" id="modal-header">
+                        <div class="modal-body-header">
+                            <div class="modal-content-header">
+                                <button class="modal-close-header close-modal-header"><svg
+                                        xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17"
+                                        fill="none" class="close-modal-svg">
+                                        <path d="M1 1L8.5 8.5M16 16L8.5 8.5M8.5 8.5L16 1L1 16" stroke="black" />
+                                    </svg></button>
+                                <p class="modal-text">Привіт! <br>Ви потрапили на сайт інтерактивних ігор та завдань
+                                    <br>Надіємось, що вам сподобається і ви отримаєте позитивні емоції! <br>Бажаємо Вам
+                                    гарно провести час!</p>
+                                <p class="modal-text">Введіть своє ім’я:</p>
+                                <input type="text" placeholder="Ваше ім’я..." class="input-modal-header">
+                                <button class="button-modal-header">Зберегти</button>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </nav>
+    </div>
 </header>
