--- a/src/sass/layout/_3numbers.scss
+++ b/src/sass/layout/_3numbers.scss
@@ -34,6 +34,7 @@
     line-height: normal;
     text-align: center;
     padding-bottom: 30px;
+    margin-right: 30px;
 }
 
 .three-numbers-button {
@@ -43,6 +44,7 @@
     box-shadow: 3px 3px 0px 0px rgba(0, 0, 0, 0.25);
     padding: 10px 20px;
     cursor: pointer;
+    margin-right: 30px;
     
 }
 
