--- a/src/sass/layout/_rock-scissor-paper.scss
+++ b/src/sass/layout/_rock-scissor-paper.scss
@@ -1,71 +1,74 @@
-.rock-scissor-paper {
-    margin-top: 35px;
-    margin-bottom: 35px;
-}
-
-.rock-scissor-paper-title {
+.flex-cvc {
     display: flex;
+    width: 50%;
+    margin: 0 auto;
+    gap: 15px;
     justify-content: center;
-    margin-bottom: 50px;
 }
 
-.game-box {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
+
+.box-cvc {
+    background: #000;
+    border-radius: 25px;
+    padding: 20px;
+    border: 5px solid rgb(255, 255, 255);
+    &:hover {
+        background: #2c2c2c;
+        border: 5px solid rgb(27, 90, 0);
+    }
 }
 
-.button-box {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 35px;
+.box-cvc-js {
+    background: #3e3e3e;
+    border: 5px solid rgb(51, 169, 0);
+    &:hover {
+        background: #545454;
+        border: 5px solid rgb(67, 222, 0);
+    }
 }
 
-.all-box {
-    display: flex;
-    justify-content: center;
-
-}
-
-.text-box {
-    position: absolute;
-    margin-left: 1000px;
-}
-
-.rock,
-.scissor,
-.paper {
-    width: 60px;
-    height: 60px;
-    background-color: #000;
-    border: none;
-    border-radius: 20px;
-    padding: 10px;
-}
-
-.rock,
-.scissor {
-    margin-right: 40px;
-}
-
-.rock-img,
-.scissor-img,
-.paper-img {
-    padding: 0;
-}
-
-.you-win {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 30px;
-}
-
-.computer-var {
-    margin: auto;
-    background-color: black;
-    color: white;
-    width: 180px;
+.btn-cvc {
+    width: 207px;
     height: 35px;
-    border-radius: 20px;
-    border: none;
+    color: #FFF;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    border-radius: 26px;
+    background-color: #000;
+    align-items: center;
+
+    &:hover {
+        background: #2c2c2c;
+    }
+}
+
+.column  {
+    display: flex;
+    width: fit-content;
+    flex-direction: column;
+    margin: 0 auto;
+    gap: 15px;
+    justify-content: center;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
+.cvc-text {
+    color: white;
+    text-align: center;
+}
+
+
+
+.flex-score-cvc {
+    width: 100%;
+    display: inline-flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 2.5%;
+    padding-bottom: 2.5%;
+    padding-left: 575px;
+    padding-right: 25%;
 }
