centring sections and fixing timeCalculator

--- a/src/partials/computerGuessed.html
+++ b/src/partials/computerGuessed.html
@@ -14,7 +14,7 @@
       <input type="number" placeholder="Введіть число" class="input input-guese-number-computer-guesed">
       <button class="search check-number-guese-number-computer-guesed"><img src="./images/search.png" alt="" class="img-search"></button>
     </div>
-    <p class="text-win-or-lose-guese-number-computer-guesed"></p>
+    <p class="text-win-or-lose-guese-number-computer-guesed">Будь ласка, введіть число від 1 до 10.</p>
   </div>
   </div>
 </section>
