--- a/src/partials/our-team.html
+++ b/src/partials/our-team.html
@@ -1,3 +1,4 @@
+<section id="our-team">
 <div id="team" class="wrap-team">
     <hr class="line" style="background-color: black; height: 1px;  width: 536px">
 
@@ -24,4 +25,4 @@
 </div>
 
 <script src="/src/js/our-team.js"></script>
-
+</section>
