--- a/src/sass/layout/_birthday.scss
+++ b/src/sass/layout/_birthday.scss
@@ -1,9 +1,9 @@
 .birthday{
     display: flex;
     justify-content: center;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    margin-top: 35px;
+    // margin-top: 35px;
 
 }
 
@@ -42,4 +42,5 @@
 
 .year-you-born {
     font-size: 15px;
+    margin-left: 110px;
 }
