--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -8,11 +8,11 @@ header {
     display: flex;
     align-items: center; 
 }
-img {
-    padding-right: 81px;
-    width: 93px;
-    height: 38px;
-}
+// img {
+//     padding-right: 81px;
+//     width: 93px;
+//     height: 38px;
+// }
 .header-nav {
     display: flex;
 }
