--- a/src/sass/layout/_calculator.scss
+++ b/src/sass/layout/_calculator.scss
@@ -13,9 +13,9 @@ margin-bottom: 36px;
   
 }
 .calc-title {
-    margin-bottom: 36px;
+    // margin-bottom: 36px;
     text-align: center;
-    margin-top: 36px;
+    // margin-top: 36px;
 }
 .calculator-input {
     margin-right: 38px;
