add: files fixes

--- a/src/partials/3-numbers.html
+++ b/src/partials/3-numbers.html
@@ -11,3 +11,4 @@
 </div>
   <p class="three-numbers-text">Найбільше число, яке ви ввели - <span id="maxNumber">(число)</span></p>
 </section>
+<script src="/src/js/3numbers.js"></script>
