--- a/src/partials/Calculator.html
+++ b/src/partials/Calculator.html
@@ -13,7 +13,7 @@
     <input class="calculator-input" id="operand2" type="number">
     <button class="calculator-button" onclick="calculateResult()" type="button">=</button>
     <input class="calculator-input" id="result" type="number" readonly>
-
   <input class="calculator-input" id="clearButton" type="button" value="Clear" onclick="clearCalculator()">
   </div>
 </section>
+<script src="/src/js/Calculator.js"></script>
