--- a/src/partials/our-team.html
+++ b/src/partials/our-team.html
@@ -2,12 +2,12 @@
 <div id="team" class="wrap-team">
     <hr class="line" style="background-color: black; height: 1px;  width: 536px">
 
-    <h1 class="title-team">Наша команда</h1>
+    <h2 class="title-team">Наша команда</h2>
 
     <div class="list-team">
         <div class="wrap-item">
             <img class="img-person" src="/src/images/Максим.jpg" alt="" class="img-person">
-            <p class="name-student">Маким</p>
+            <p class="name-student">Максим</p>
             <p class="information-student">Team lead</p>
         </div>
         <div class="wrap-item">
