--- a/src/partials/rock-scissor-paper.html
+++ b/src/partials/rock-scissor-paper.html
@@ -1,4 +1,5 @@
 <section id="uba1">
+    <hr class="line" style="background-color: black; height: 1px;  width: 536px">
   <div class="chuvachy">
       <div class="hr"></div>
       <h3 class="h3-year4 column">Камінь - ножиці - папір</h3> 
@@ -26,7 +27,6 @@
       <h3 class="h3-year4 column result">Результат</h3> 
       <div class="column">
           <button type="button" class="btn-cvc" id="play">Підтвердити</button>
-          <button type="button" class="btn-cvc" id="restart">Оновити</button>
       </div>
   </div>
   </section>
