fixing i hope final

--- a/src/partials/computerGuessed.html
+++ b/src/partials/computerGuessed.html
@@ -1,4 +1,4 @@
-<section class="computerGuessed">
+<section class="computerGuessed" id="computerGuessed">
   <div class="container">
   <hr class="line" style="background-color: black; height: 1px;  width: 536px">
 
