--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -13,6 +13,8 @@
     gap: 10px;
     border-radius: 20px;
     background: #D7D7D7;
+    margin-bottom: 20px;
+    margin-right: 40px;
   }
   .primary-button {
     display: inline-flex;
@@ -100,4 +102,14 @@
     background-color: #fff;
     border: 0;
   }
-  
+  .logoSiteeee {
+    margin-top: 15px;
+    margin-right: 150px;
+    width: 140px;
+    height: 60px;
+  }
+  #footer {
+    display: flex;
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
