--- a/src/sass/layout/_sienlist.scss
+++ b/src/sass/layout/_sienlist.scss
@@ -32,8 +32,11 @@
     flex-direction: column;
     // justify-content: center;
     align-items: center;
-    margin-left: 60px;
+    margin-left: 200px;
 }
 .button-scien9 {
-    margin-left: 25%;
+    margin-left: 30%;
+}
+#scientistCardsContainer {
+    margin-left: 200px;
 }
