--- a/src/partials/sientiest.html
+++ b/src/partials/sientiest.html
@@ -13,7 +13,7 @@
     <!-- </div>
 
   </section> -->
-  <section>
+  <section id="scieenSectionn">
     <div>
     <div id="scientistCardsContainer">
          
