--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -235,3 +235,8 @@ body {
   .scientist-card.dark-theme {
     color: #121212;
   }
+  .logoSiteee {
+    width: 70px;
+    height: 30px;
+    margin-right: 80px;
+  }
